Fixing images not showing on deploy bug

--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
 }
 
 .header {
-  background: url(../../public/images/image-36.png);
+  background: url(../src/images/image-36.png);
   height: 200px;
   width: 100%;
   object-fit: fill;
